--- a/css/style.css
+++ b/css/style.css
@@ -157,3 +157,26 @@
     font-size: 14px;
   }
 }
+        table {
+          border-collapse: collapse;
+          width: 60%;
+          margin: 20px auto;
+          border-radius: 10px;
+          margin-top: 100px;
+         
+        }
+        th, td {
+          background-color: #f3f3f3;
+          padding: 8px 12px;
+          text-align: left;
+        }
+        th {
+          background-color: #f3f3f3;
+        }
+        #addRowBtn {
+          display: block;
+          margin: 20px auto;
+          padding: 10px 20px;
+          font-size: 16px;
+      
+        }
